apollo-router/tests/integration/snapshots/integration_tests__integration__redis__entity_cache_basic-4.snap
---
source: apollo-router/tests/integration/redis.rs
expression: response
---
{
  "data": {
    "topProducts": [
      {
        "name": "chair",
        "reviews": null
      },
      {
        "name": "plate",
        "reviews": null
      }
    ]
  },
  "errors": [
    {
      "message": "couldn't find mock for query {\"query\":\"query($representations: [_Any!]!) { _entities(representations: $representations) { ... on Product { reviews { body } } } }\",\"variables\":{\"representations\":[{\"upc\":\"1\",\"__typename\":\"Product\"},{\"upc\":\"3\",\"__typename\":\"Product\"}]}}",
      "path": [
        "topProducts",
        0
      ],
      "extensions": {
        "code": "FETCH_ERROR",
        "service": "reviews"
      }
    },
    {
      "message": "couldn't find mock for query {\"query\":\"query($representations: [_Any!]!) { _entities(representations: $representations) { ... on Product { reviews { body } } } }\",\"variables\":{\"representations\":[{\"upc\":\"1\",\"__typename\":\"Product\"},{\"upc\":\"3\",\"__typename\":\"Product\"}]}}",
      "path": [
        "topProducts",
        1
      ],
      "extensions": {
        "code": "FETCH_ERROR",
        "service": "reviews"
      }
    }
  ]
}
