apollo-router/tests/integration/snapshots/integration_tests__integration__redis__entity_cache_basic-5.snap
---
source: apollo-router/tests/integration/redis.rs
expression: "v.as_object().unwrap().get(\"data\").unwrap()"
---
{
  "reviews": [
    {
      "body": "I can sit on it"
    },
    {
      "body": "I can eat on it"
    }
  ]
}
