apollo-router/tests/integration/snapshots/integration_tests__integration__redis__entity_cache_basic.snap
---
source: apollo-router/tests/integration/redis.rs
expression: response
---
{
  "data": {
    "topProducts": [
      {
        "name": "chair",
        "reviews": [
          {
            "body": "I can sit on it"
          }
        ]
      },
      {
        "name": "table",
        "reviews": [
          {
            "body": "I can sit on it"
          },
          {
            "body": "I can eat on it"
          }
        ]
      }
    ]
  },
  "extensions": {
    "cache_keys": [
      "824954bf-c35b-423f-bb83-8f790e0cf885",
      "5921ebd6-fe5a-4ace-a44f-d854448e897b"
    ]
  }
}
