apollo-router/tests/integration/snapshots/integration_tests__integration__redis__entity_cache_with_nested_field_set-2.snap
---
source: apollo-router/tests/integration/redis.rs
expression: "v.as_object().unwrap().get(\"data\").unwrap()"
---
{
  "allProducts": [
    {
      "name": "Test",
      "createdBy": {
        "__typename": "User",
        "email": "test@test.com",
        "country": {
          "a": "France"
        }
      }
    }
  ]
}
