apollo-router/tests/integration/snapshots/integration_tests__integration__redis__query_planner.snap
---
source: apollo-router/tests/integration/redis.rs
expression: query_plan
---
{
  "kind": "Fetch",
  "serviceName": "products",
  "variableUsages": [],
  "operation": "{topProducts{name name2:name}}",
  "operationName": null,
  "operationKind": "query",
  "id": null,
  "inputRewrites": null,
  "outputRewrites": null,
  "contextRewrites": null,
  "schemaAwareHash": "291280bd442c9013f56b28adeed7edcaca5e9c277c0cd5a650800942af575dec",
  "authorization": {
    "is_authenticated": false,
    "scopes": [],
    "policies": []
  }
}
