apollo-router/tests/integration/snapshots/integration_tests__integration__redis__query_planner_cache.snap
---
source: apollo-router/tests/integration/redis.rs
expression: query_plan
---
{
  "kind": "Fetch",
  "serviceName": "products",
  "variableUsages": [],
  "operation": "{ topProducts { name name2: name } }",
  "operationName": null,
  "operationKind": "query",
  "id": null,
  "inputRewrites": null,
  "outputRewrites": null,
  "contextRewrites": null,
  "schemaAwareHash": "247714c94d3ad9dd88583ad043a8f426cfd40005234d502f3ef7534385f467b4",
  "authorization": {
    "is_authenticated": false,
    "scopes": [],
    "policies": []
  }
}
